--- a/views/admin-home.hbs
+++ b/views/admin-home.hbs
@@ -4,31 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/fontawesome/css/all.css">
     <title>Admin - Anasayfa</title>
-     <link rel="stylesheet" href="assets/css/style-2.css">
 </head>
 <body>
-     <div class="container">
+    <div class="container">
       <div class="header">
           <div class="nav">
             <ul>
-                <li class="home"><a href="#">
-                    <form class="form-wrapper cf">
-                        <input type="search" placeholder="Aranacak Metin..." required>
-                    </form></a></li>
+                <li class="home"><a href="/admin-home">Anasayfa</a></li>
                 <li class="tutorials"><a href="/admin-home">Site Logo</a></li>
                 <li class="about"><a href="/cikis">Çıkış Yap</a></li>
             </ul>
          </div>
          <div class="center-area">
-                 <div class="adminana"><a href="/kullanici-ayarlari">Kullanıcı Ayarları</a> </div>
-                 <div class="adminana"><a href="/envanterler">Envanterler </a> </div>
-                 <div class="adminana"><a href="/talepler">Talepler</a> </div>
-                 <div class="adminana"><a href="/site-ayarlari">Site Ayarları </a> </div>
-                 <div class="adminana"><a href="/raporlar">Raporlar </a></div>
-                 <div class="adminana1">Hoş geldin patron..ani bir durum olursa sana buradan
-bilgiler vereceğim.. </div>
-<div class="ft"> Copyrights - 2019 | IntTechProje</div>
+            <div class="admin-left-menu">
+                <a href="/kullanici-listele"><div class="admin-left-menu-item">Kullanıcı Ayarları</div></a>
+                <a href="/envanterler"><div class="admin-left-menu-item">Envanterler</div></a>
+                <a href="/talepler"><div class="admin-left-menu-item">Talepler</div></a>
+                <a href="/site-ayarlari"><div class="admin-left-menu-item">Site Ayarları</div></a>
+                <a href="/raporlar"><div class="admin-left-menu-item">Raporlar</div></a>
+            </div>
+            <div class="admin-left-area">Admin Anasayfa</div>
          </div>
-</body
+          <div class="clear"></div>
+         <div class="footer">&copy; Copyrights - 2019 | IntTechProje </div>
+      </div>  
+    </div>
+</body>
 </html>
