--- a/views/kullanici-duzenle.hbs
+++ b/views/kullanici-duzenle.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.css">
-    <title>Kullanıcı Ekle</title>
+    <title>Kullanıcı Düzenle</title>
 </head>
 <body>
     <div class="container">
@@ -20,12 +20,12 @@
          </div>
          <div class="center-area">
             <div class="global-pages">
-                <a href="/kullanici-ekle"><div class="global-pages-title">Kullanıcı Ekle</div></a>
+                <a href="/kullanici-duzenle"><div class="global-pages-title">Kullanıcı Düzenle</div></a>
                 <form action="" method="POST">
                 <a href="#"><div class="global-pages-input"><input type="text" name="username" placeholder="@username" required></div></a>
                 <a href="#"><div class="global-pages-input"><input type="password" name="password" placeholder="@password" required></div></a>
                 <a href="#"><div class="global-pages-input"><input type="mail" name="email" placeholder="@email" required></div></a>
-                <a href="#"><div class="global-pages-input"><button type="submit">Kullanıcı Ekle</button></div></a>
+                <a href="#"><div class="global-pages-input"><button type="submit">Kullanıcı Düzenle</button></div></a>
                 </form>
             </div>
          </div>
