--- a/views/teknisyen-home.hbs
+++ b/views/teknisyen-home.hbs
@@ -1,36 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Teknisyen - Ansayfa</title>
-    <link rel="stylesheet" href="assets/css/style-2.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/fontawesome/css/all.css">
+    <title>Teknisyen - Anasayfa</title>
 </head>
+
 <body>
-      <div class="container">
-      <div class="header">
-          <div class="nav">
-            <ul>
-                <li class="home"><a href="#">
-                    <form class="form-wrapper cf">
-                        <input type="search" placeholder="Aranacak Metin..." required>
-                    </form></a></li>
-                <li class="tutorials"><a href="/teknisyen-home">Site Logo</a></li>
-                <li class="about"><a href="/cikis">Çıkış Yap</a></li>
-            </ul>
-         </div>
-         <div class="center-area">
-                <a href="/beklemede-olan-taleplerim"> <div class="box1">Beklemede Olan Talepler</div></a>
-                <a href="/gunluk-yapilmasi-gereken-taleplerim"><div class="box1">Günlük Yapılması Gereken Talepler </div></a>
-                <a href="/suresi-dolan-taleplerim"><div class="box1">Süresi Dolan Talepler</div></a>
-                <a href="/hizmet-talepleri"><div class="box1">Hizmet Talepleri</div></a>
-                <a href="/onay-bekleyen-talepler"><div class="box1">Onay Bekleyen Talepler</div></a>
-                <a href="/envanterler"><div class="box1">Envanterler</div></a>
-         </div>
-         <div class="clear"></div>
-         <div class="footer">&copy; Copyrights - 2019 | IntTechProje </div>
-      </div>  
+    <div class="container">
+        <div class="header">
+            <div class="nav">
+                <ul>
+                    <li class="home"><a href="/teknisyen-home">Anasayfaya geri dön</a></li>
+                    <li class="tutorials"><a href="/admin-home">Site Logo</a></li>
+                    <li class="about"><a href="/cikis">Çıkış Yap</a></li>
+                </ul>
+            </div>
+            <div class="center-area">
+                <a href="/beklemede-olan-taleplerim">
+                    <div class="teknisyen-home-div">Beklemede Olan Talepler</div>
+                </a>
+                <a href="/gunluk-yapilmasi-gereken-taleplerim">
+                    <div class="teknisyen-home-div">Günlük Yapılması Gereken Talepler</div>
+                </a>
+                <a href="/suresi-dolan-taleplerim">
+                    <div class="teknisyen-home-div">Süresi Dolan Talepler</div>
+                </a>
+                <a href="/hizmet-talepleri">
+                    <div class="teknisyen-home-div">Hizmet Talepleri</div>
+                </a>
+                <a href="/onay-bekleyen-talepler">
+                    <div class="teknisyen-home-div">Onay Bekleyen Talepler</div>
+                </a>
+                <a href="/envanterler">
+                    <div class="teknisyen-home-div">Envanterler</div>
+                </a>
+            </div>
+            <div class="clear"></div>
+            <div class="footer">&copy; Copyrights - 2019 | IntTechProje </div>
+        </div>
     </div>
 </body>
+
 </html>
