--- a/views/user-home.hbs
+++ b/views/user-home.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.css">
-    <title>Anasayfa</title>
+    <title>Kullanıcı - Anasayfa</title>
 </head>
 <body>
     <div class="container">
@@ -20,7 +20,7 @@
          </div>
          <div class="center-area">
              <div class="home-button">
-                <a href="/profil"><button type="submit">Profilim</button></a>
+                <a href="/kullanici-profili"><button type="submit">Profilim</button></a>
              </div>
              <div class="home-text">
                 <div class="home-text-left">
