--- a/views/onay-bekleyen-talepler.hbs
+++ b/views/onay-bekleyen-talepler.hbs
@@ -1,30 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Onay bekleyen talepler</title>
-     <link rel="stylesheet" href="assets/css/style-2.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/fontawesome/css/all.css">
+    <title>Onay Bekleyen Talepler</title>
 </head>
+
 <body>
-     <div class="container">
-      <div class="header">
-          <div class="nav">
-            <ul>
-                <li class="home"><a href="#">
-                    <form class="form-wrapper cf">
-                        <input type="search" placeholder="Aranacak Metin..." required>
-                    </form></a></li>
-                <li class="tutorials"><a href="/teknisyen-home">Site Logo</a></li>
-                <li class="about"><a href="/cikis">Çıkış Yap</a></li>
-            </ul>
-         </div>
-         <div class="center-area">
-            <a href="/onay-bekleyen-talepler"> <div class="box1">Onay bekleyen talepler</div></a>
-                 <a href="#"><div class="ist" >Talep <div class="cop"><img width="25" height="25" src="assets/img/denied.png" /><div class="cop"><img width="25" height="25" src="assets/img/edt.jpg" /><div class="cop"><img width="25" height="25" src="assets/img/cop.jpg" /></div></div></div></div></a>
-                 <a href="#"><div class="ist" >Talep <div class="cop"><img width="25" height="25" src="assets/img/approved.png" /><div class="cop"><img width="25" height="25" src="assets/img/edt.jpg" /><div class="cop"><img width="25" height="25" src="assets/img/cop.jpg" /></div></div></div></div></a>
-                 <a href="#"><div class="ist" >Talep<div class="cop"><img width="25" height="25" src="assets/img/approved.png" /><div class="cop"><img width="25" height="25" src="assets/img/edt.jpg" /><div class="cop"><img width="25" height="25" src="assets/img/cop.jpg" /></div></div></div></div></a>
-         </div>
+    <div class="container">
+        <div class="header">
+            <div class="nav">
+                <ul>
+                    <li class="home"><a href="/teknisyen-home">Anasayfaya geri dön</a></li>
+                    <li class="tutorials"><a href="/admin-home">Site Logo</a></li>
+                    <li class="about"><a href="/cikis">Çıkış Yap</a></li>
+                </ul>
+            </div>
+            <div class="center-area">
+                <div class="global-pages">
+                    <a href="/onay-bekleyen-talepler">
+                        <div class="global-pages-title">Onay Bekleyen Talepler</div>
+                    </a>
+                    <div class="global-pages-div"><a href="#">Talep - 1</a>
+                        <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/approved.png"
+                                    alt=""></a></div>
+                        <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/delete.png"
+                                    alt=""></a></div>
+                        <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/edit.png"
+                                    alt=""></a></div>
+                    </div>
+                    <div class="global-pages-div"><a href="#">Talep - 2</a>
+                        <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/denied.png"
+                                    alt=""></a></div>
+                        <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/delete.png"
+                                    alt=""></a></div>
+                        <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/edit.png"
+                                    alt=""></a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="clear"></div>
+        <div class="footer">&copy; Copyrights - 2019 | IntTechProje </div>
+    </div>
+    </div>
 </body>
+
 </html>
