--- a/views/suresi-dolan-taleplerim.hbs
+++ b/views/suresi-dolan-taleplerim.hbs
@@ -1,27 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/fontawesome/css/all.css">
     <title>Süresi dolan taleplerim</title>
-     <link rel="stylesheet" href="assets/css/style-2.css">
 </head>
+
 <body>
-     <div class="container">
-     <div class="header">
-          <div class="nav">
-            <ul>
-                <li class="home"><a href="#">
-                    <form class="form-wrapper cf">
-                        <input type="search" placeholder="Aranacak Metin..." required>
-                    </form></a></li>
-                <li class="tutorials"><a href="/teknisyen-home">Site Logo</a></li>
-                <li class="about"><a href="/cikis">Çıkış Yap</a></li>
-            </ul>
-         </div>
-         <div class="center-area">
-            <div class="box1">Süresi dolan talep bulunmamakta</div>
-         </div>
+    <div class="container">
+        <div class="header">
+            <div class="nav">
+                <ul>
+                    <li class="home"><a href="/teknisyen-home">Anasayfaya geri dön</a></li>
+                    <li class="tutorials"><a href="/admin-home">Site Logo</a></li>
+                    <li class="about"><a href="/cikis">Çıkış Yap</a></li>
+                </ul>
+            </div>
+            <div class="center-area">
+                <div class="global-pages">
+                    <a href="/suresi-dolan-taleplerim">
+                        <div class="global-pages-title">Süresi Dolan Taleplerim</div>
+                    </a>
+                    <div class="global-pages-div">süresi dolan talep bulunmamakta..
+                    </div>
+                    <!--
+                    <div class="global-pages-div"><a href="#">Talep - 1</a>
+                        <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/delete.png"
+                                    alt=""></a></div>
+                        <div class="global-pages-div-img-kategori"><a href="#"><img src="assets/img/edit.png"
+                                    alt=""></a></div>
+                    </div>
+                    -->
+                </div>
+            </div>
+        </div>
+        <div class="clear"></div>
+        <div class="footer">&copy; Copyrights - 2019 | IntTechProje </div>
+    </div>
+    </div>
 </body>
+
 </html>
