ödevin ön yüz çalışması bitti

--- a/views/admin-home.hbs
+++ b/views/admin-home.hbs
@@ -22,7 +22,7 @@
             <div class="admin-left-menu">
                 <a href="/kullanici-listele"><div class="admin-left-menu-item">Kullanıcı Ayarları</div></a>
                 <a href="/envanterler"><div class="admin-left-menu-item">Envanterler</div></a>
-                <a href="/talepler"><div class="admin-left-menu-item">Talepler</div></a>
+                <a href="/teknisyen-home"><div class="admin-left-menu-item">Talepler</div></a>
                 <a href="/site-ayarlari"><div class="admin-left-menu-item">Site Ayarları</div></a>
                 <a href="/raporlar"><div class="admin-left-menu-item">Raporlar</div></a>
             </div>
