--- a/public/css/style.css
+++ b/public/css/style.css
@@ -564,6 +564,143 @@ a:active {
     padding-left: 5px;
 }
 
+.envanter-area {
+    width: 390px;
+    background-color: #aaa;
+    margin: 5px;
+    height: 70px;
+    float: left;
+    text-align: left;
+}
+
+.envanter-area-ekle {
+    width: 390px;
+    background-color: #aaa;
+    margin: 5px;
+    height: 40px;
+    float: left;
+    text-align: center;
+    padding-top: 20px;
+}
+
+.envanter-img {
+    width: 100px;
+    height: 70px;
+    float: left;
+    overflow: hidden;
+}
+
+.envanter-img>a>img {
+    width: 100%;
+    height: 100%;
+}
+
+.envanter-text {
+    width: 170px;
+    height: 65px;
+    padding-left: 5px;
+    padding-top: 5px;
+    float: left;
+    margin-left: 5px;
+}
+
+.envanter-buton {
+    width: 100px;
+    height: 63px;
+    float: left;
+    margin-left: 5px;
+    padding-top: 7px;
+}
+
+.envanter-buton>a>button {
+    width: 100px;
+    margin-bottom: 5px;
+}
+
+.envanter-goruntule-area-1 {
+    width: 390px;
+    height: 200px;
+    float: left;
+    margin: 5px;
+}
+
+.envanter-goruntule-area-1-left {
+    width: 183px;
+    height: 190px;
+    float: left;
+    margin: 5px;
+    overflow: hidden;
+    border: 1px solid #ccc;
+}
+
+.envanter-goruntule-area-1-right {
+    width: 178px;
+    height: 185px;
+    float: left;
+    margin: 5px;
+    overflow: hidden;
+    padding-top: 5px;
+    padding-left: 5px;
+    border: 1px solid #ccc;
+}
+
+.envanter-goruntule-area-1-left>img {
+    width: 100%;
+    height: 100%;
+}
+
+.envanter-goruntule-area-2 {
+    width: 390px;
+    height: 280px;
+    float: left;
+    margin: 5px;
+}
+
+.envanter-goruntule-area-2-title {
+    height: 28px;
+    width: 385px;
+    border: 1px solid #ddd;
+    text-align: center;
+    padding-top: 10px;
+}
+
+.envanter-goruntule-area-2-info {
+    height: 38px;
+    width: 382px;
+    border: 1px solid #ddd;
+    padding-top: -1px;
+}
+
+.envanter-goruntule-area-2-info>input[type="text"] {
+    width: 100%;
+    height: 100%;
+}
+
+.envanter-goruntule-area-1-right>form>input[type="text"] {
+    float: left;
+    margin-top: 50px;
+    height: 40px;
+    width: 170px;
+}
+
+.envanter-goruntule-area-1-right>form>button[type="submit"] {
+    float: right;
+    margin-top: 5px;
+    margin-right: 4px;
+}
+
+.envanter-goruntule-area-2-info>form>button[type="submit"] {
+    float: right;
+    margin-top: 10px;
+    margin-right: -5px;
+}
+
+.envanter-goruntule-area-2-info>button[type="submit"] {
+    float: right;
+    margin-top: 10px;
+    margin-right: -5px;
+}
+
 .footer {
     bottom: 0;
     height: 25px;
